--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .btn {
-    @apply rounded-[20px] bg-blue-500 hover:bg-blue-400 px-5 py-3 md:px-6 md:py-4 text-lg md:text-2xl lg:text-3xl text-white md:transform md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
+    @apply z-10 rounded-[20px] bg-blue-500 hover:bg-blue-400 px-5 py-3 md:px-6 md:py-4 text-lg md:text-2xl lg:text-3xl text-white md:transform md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
   }
 }
