--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
     @apply z-10 rounded-[20px] bg-blue-500 hover:bg-blue-400 px-5 py-3 md:px-6 md:py-4 text-lg md:text-2xl lg:text-3xl text-white md:transform md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
   }
 
-  .nav_footer {
+  .nav_icons {
     @apply absolute z-[50] -bottom-20 w-[50%] md:w-[20%] max-h-[150px] rounded-full flex justify-between items-center border bg-black border-white px-4 py-7;
   }
 }
