--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply h-screen w-screen overflow-hidden;
+}
+
 @layer components {
   .btn {
     @apply z-10 rounded-[20px] bg-blue-500 hover:bg-blue-400 px-5 py-3 md:px-6 md:py-4 text-lg md:text-2xl lg:text-3xl text-white md:transform md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
   }
 
   .nav_icons {
-    @apply absolute z-[50] -bottom-20 w-[50%] md:w-[20%] max-h-[150px] rounded-full flex justify-between items-center border bg-black border-white px-4 py-7;
+    @apply absolute z-50 -bottom-[7%] xs:-bottom-[6%] flex border border-white bg-transparent px-4 py-7 rounded-full gap-2 md:bottom-[auto] md:translate-x-0 md:-left-[11%] md:top-[50%] md:-translate-y-[50%] md:w-[20%] md:flex-col md:max-h-[450px] md:px-8 md:items-end lg:-bottom-[4%] lg:top-auto lg:translate-y-0 lg:flex-row lg:left-[50%] lg:-translate-x-[50%] lg:justify-center lg:items-center xl:px-0 xl:py-6;
   }
 }
