--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,10 @@ body {
   .swiper_image {
     @apply w-3/4 xs:w-[85%] md:w-[70%] lg:w-[70px] xl:w-[80px];
   }
+
+  .project-btn {
+    @apply rounded-xl bg-blue-500 px-4 py-2 text-sm font-semibold text-white hover:bg-blue-400 active:bg-blue-800 xs:text-base md:transform md:text-lg md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2 xl:px-6 xl:py-3 xl:text-xl;
+  }
 }
 
 .flip-card-inner {
