--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply h-screen w-screen overflow-hidden;
+  @apply h-screen w-screen overflow-y-hidden;
 }
 
 @layer components {
