--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,28 @@ body {
 .flip-card-back {
   transform: rotateY(180deg);
 }
+
+/* This is swiper css for Certificate component for contact-me page */
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
