devide my-skill page to several components to clean up the codebase

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,10 @@ body {
 .flip-card-back {
   transform: rotateY(180deg);
 }
+
+/* This some custom css for swiper slide for Certificate component */
+
+.swiper-pagination-current,
+.swiper-pagination-total {
+  @apply text-green-500;
+}
