redesign homepage to make it more responsive and eliminate overlap images that prevent clickable elements from working properly

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body {
   /* this is homepage button */
 
   .btn {
-    @apply z-10 rounded-[20px] bg-blue-500 px-5 py-3 text-lg text-white hover:bg-blue-400 active:bg-blue-800 md:transform md:px-6 md:py-4 md:text-2xl md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
+    @apply z-10 rounded-[20px] bg-blue-500 px-5 py-3 text-lg text-white hover:bg-blue-400 active:bg-blue-800 md:transform md:px-6 md:py-4 md:text-xl md:transition md:duration-500 md:ease-in-out md:hover:translate-y-2;
   }
 
   /* This use to style navigation icons in the bottom of the page */
